<?xml version="1.0"?>
<package>
  <name>flexiport</name>
  <version>2.0.0</version>
  <description>
    Flexible communications library.

    Flexiport provides a consistent interface for communicating over a range of
    data port types. Currently serial (including serial-over-USB), TCP and UDP
    ports are supported. Logging is possible, which allows communications sessions
    to be played back at a later date without the original hardware present.

    Documentation is available online at http://gbiggs.github.com/flexiport/

    This software is developed at the National Institute of Advanced
    Industrial Science and Technology. Approval number H20PRO-881. This
    software is licensed under the Lesser General Public License. See
    COPYING.LESSER.
  </description>

  <maintainer email="michael@nuspatial.com">Michael Carroll</maintainer>

  <license>GPL3</license>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>doxygen</build_depend>
  <build_depend>python-sphinx</build_depend>
  <build_depend>python-catkin-sphinx</build_depend>
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
